fixes zeit command and remove z-index

--- a/packages/react-tiny-toast/src/index.css
+++ b/packages/react-tiny-toast/src/index.css
@@ -5,7 +5,6 @@
   flex-direction: column;
   flex-shrink: 0;
   position: fixed;
-  z-index: -1;
   top: 0px;
   left: 0px;
 }
